--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,6 +33,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v3
+      - name: Download npm
+        run: npm install .
+      - name: Build with npm
+        run: npm run build:h5
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
