feat: 修正远程部署代码

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,12 +36,11 @@ jobs:
       - name: Download npm
         run: npm install .
       - name: Build with npm
-        run: npm run build:h5
+        run: npm run build:h5:prod
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          # Upload entire repository
-          path: '.'
+          path: "./dist/build/h5"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
