--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "build:app-ios": "uni build -p app-ios",
     "build:custom": "uni build -p",
     "build:h5": "uni build",
+    "build:h5:prod": "BUILD_ENV=prod uni build",
     "build:h5:ssr": "uni build --ssr",
     "build:mp-alipay": "uni build -p mp-alipay",
     "build:mp-baidu": "uni build -p mp-baidu",
