--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@dcloudio/uni-cli-shared": "3.0.0-3081220230817001",
     "@dcloudio/uni-stacktracey": "3.0.0-3081220230817001",
     "@dcloudio/vite-plugin-uni": "3.0.0-3081220230817001",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "@vue/runtime-core": "^3.2.45",
     "@vue/tsconfig": "^0.1.3",
     "node-sass": "^9.0.0",
